wrote conclusion and added hypothesis figures

--- a/writing/env-var-review.bib
+++ b/writing/env-var-review.bib
@@ -2581,3 +2581,141 @@
 	year = {2014},
 	pages = {E154--E167},
 }
+
+@article{mueller_how_2011,
+	title = {How landscape dynamics link individual- to population-level movement patterns: a multispecies comparison of ungulate relocation data: {Population}-level movement patterns},
+	volume = {20},
+	issn = {1466822X},
+	shorttitle = {How landscape dynamics link individual- to population-level movement patterns},
+	url = {https://onlinelibrary.wiley.com/doi/10.1111/j.1466-8238.2010.00638.x},
+	doi = {10.1111/j.1466-8238.2010.00638.x},
+	language = {en},
+	number = {5},
+	urldate = {2022-08-01},
+	journal = {Global Ecology and Biogeography},
+	author = {Mueller, Thomas and Olson, Kirk A. and Dressler, Gunnar and Leimgruber, Peter and Fuller, Todd K. and Nicolson, Craig and Novaro, Andres J. and Bolgeri, Maria J. and Wattles, David and DeStefano, Stephen and Calabrese, Justin M. and Fagan, William F.},
+	month = sep,
+	year = {2011},
+	pages = {683--694},
+}
+
+@article{ciuti_effects_2012,
+	title = {Effects of {Humans} on {Behaviour} of {Wildlife} {Exceed} {Those} of {Natural} {Predators} in a {Landscape} of {Fear}},
+	volume = {7},
+	issn = {1932-6203},
+	url = {https://dx.plos.org/10.1371/journal.pone.0050611},
+	doi = {10.1371/journal.pone.0050611},
+	language = {en},
+	number = {11},
+	urldate = {2022-08-11},
+	journal = {PLoS ONE},
+	author = {Ciuti, Simone and Northrup, Joseph M. and Muhly, Tyler B. and Simi, Silvia and Musiani, Marco and Pitt, Justin A. and Boyce, Mark S.},
+	editor = {Moreira, Nei},
+	month = nov,
+	year = {2012},
+	pages = {e50611},
+	file = {Full Text:C\:\\Users\\stefa\\Zotero\\storage\\GIUPN6RH\\Ciuti et al. - 2012 - Effects of Humans on Behaviour of Wildlife Exceed .pdf:application/pdf},
+}
+
+@article{berger-tal_invisible_2019,
+	title = {Invisible barriers: anthropogenic impacts on inter- and intra-specific interactions as drivers of landscape-independent fragmentation},
+	volume = {374},
+	issn = {0962-8436, 1471-2970},
+	shorttitle = {Invisible barriers},
+	url = {https://royalsocietypublishing.org/doi/10.1098/rstb.2018.0049},
+	doi = {10.1098/rstb.2018.0049},
+	abstract = {Anthropogenically induced fragmentation constitutes a major threat to biodiversity. Presently, conservation research and actions focus predominantly on fragmentation caused directly by physical transformation of the landscape (e.g. deforestation, agriculture, urbanization, roads, etc.). While there is no doubt that landscape features play a key role in fragmenting populations or enhancing connectivity, fragmentation may also come about by processes other than the transformation of the landscape and which may not be readily visible. Such landscape-independent fragmentation (LIF) usually comes about when anthropogenic disturbance alters the inter- and intra-specific interactions among and within species. LIF and its drivers have received little attention in the scientific literature and in the management of wildlife populations. We discuss three major classes of LIF processes and their relevance for the conservation and management of species and habitats: (i) interspecific dispersal dependency, in which populations of species that rely on other species for transport and propagation become fragmented as the transporting species declines; (ii) interspecific avoidance induction, where species are excluded from habitats and corridors owing to interspecific interactions resulting from anthropogenically induced changes in community structure (e.g. exclusions by increased predation pressure); and (iii) intraspecific behavioural divergence, where populations become segregated owing to anthropogenically induced behavioural differentiation among them.
+            This article is part of the theme issue ‘Linking behaviour to dynamics of populations and communities: application of novel approaches in behavioural ecology to conservation'.},
+	language = {en},
+	number = {1781},
+	urldate = {2022-08-11},
+	journal = {Philosophical Transactions of the Royal Society B: Biological Sciences},
+	author = {Berger-Tal, Oded and Saltz, David},
+	month = sep,
+	year = {2019},
+	pages = {20180049},
+	file = {Full Text:C\:\\Users\\stefa\\Zotero\\storage\\7KNB9KXJ\\Berger-Tal and Saltz - 2019 - Invisible barriers anthropogenic impacts on inter.pdf:application/pdf},
+}
+
+@article{dunning_ecological_1992,
+	title = {Ecological {Processes} {That} {Affect} {Populations} in {Complex} {Landscapes}},
+	volume = {65},
+	issn = {00301299},
+	url = {https://www.jstor.org/stable/3544901?origin=crossref},
+	doi = {10.2307/3544901},
+	number = {1},
+	urldate = {2022-08-11},
+	journal = {Oikos},
+	author = {Dunning, John B. and Danielson, Brent J. and Pulliam, H. Ronald},
+	month = oct,
+	year = {1992},
+	pages = {169},
+}
+
+@article{camp_examining_2013,
+	title = {Examining functional components of cover: the relationship between concealment and visibility in shrub-steppe habitat},
+	volume = {4},
+	issn = {2150-8925},
+	shorttitle = {Examining functional components of cover},
+	url = {http://doi.wiley.com/10.1890/ES12-00114.1},
+	doi = {10.1890/ES12-00114.1},
+	language = {en},
+	number = {2},
+	urldate = {2022-08-11},
+	journal = {Ecosphere},
+	author = {Camp, M. J. and Rachlow, J. L. and Woods, B. A. and Johnson, T. R. and Shipley, L. A.},
+	month = feb,
+	year = {2013},
+	pages = {art19},
+	file = {Full Text:C\:\\Users\\stefa\\Zotero\\storage\\HINE9U8G\\Camp et al. - 2013 - Examining functional components of cover the rela.pdf:application/pdf},
+}
+
+@article{seigle-ferrand_systematic_2021,
+	title = {A {Systematic} {Review} of {Within}-{Population} {Variation} in the {Size} of {Home} {Range} {Across} {Ungulates}: {What} {Do} {We} {Know} {After} 50 {Years} of {Telemetry} {Studies}?},
+	volume = {8},
+	issn = {2296-701X},
+	shorttitle = {A {Systematic} {Review} of {Within}-{Population} {Variation} in the {Size} of {Home} {Range} {Across} {Ungulates}},
+	url = {https://www.frontiersin.org/articles/10.3389/fevo.2020.555429/full},
+	doi = {10.3389/fevo.2020.555429},
+	abstract = {Studying the factors determining the sizes of home ranges, based on body mass, feeding style, and sociality level, is a long-standing goal at the intersection of ecology and evolution. Yet, how species-specific life history traits interact with different components of the landscape to shape differences in individual home ranges at within-population level has received much less attention. Here, we review the empirical literature on ungulates to map our knowledge of the relative effects of the key environmental drivers (resource availability, landscape heterogeneity, lethal and non-lethal risks) on the sizes of individual home ranges within a population and assess whether species' characteristics (body mass, diet, and social structure), account for observed variation in the responses of the sizes of individual home ranges to local environmental drivers. Estimating the sizes of home ranges and measuring environmental variables raise a number of methodological issues, which complicate the comparison of empirical studies. Still, from an ecological point of view, we showed that (1) a majority of papers (75\%) supported the habitat productivity hypothesis, (2) the support for the influence of landscape heterogeneity was less pervasive across studies, (3) the response of cattle-type to variation in food availability was stronger than the response of moose-type, and (4) species-specific body mass or sociality level had no detectable effect on the level of support to the biological hypotheses. To our surprise, our systematic review revealed a dearth of studies focusing on the ecological drivers of the variation in the sizes of individual home ranges (only about 1\% of articles that dealt with home ranges), especially in the later decade where more focus has been devoted to movement. We encourage researchers to continue providing such results with sufficient sample sizes and robust methodologies, as we still need to fully understand the link between environmental drivers and individual space use while accounting for life-history constraints.},
+	urldate = {2022-08-16},
+	journal = {Frontiers in Ecology and Evolution},
+	author = {Seigle-Ferrand, Juliette and Atmeh, Kamal and Gaillard, Jean-Michel and Ronget, Victor and Morellet, Nicolas and Garel, Mathieu and Loison, Anne and Yannic, Glenn},
+	month = jan,
+	year = {2021},
+	pages = {555429},
+	file = {Full Text:C\:\\Users\\stefa\\Zotero\\storage\\3FEH5F87\\Seigle-Ferrand et al. - 2021 - A Systematic Review of Within-Population Variation.pdf:application/pdf},
+}
+
+@article{jolly_animal_2022,
+	title = {Animal mortality during fire},
+	volume = {28},
+	issn = {1354-1013, 1365-2486},
+	url = {https://onlinelibrary.wiley.com/doi/10.1111/gcb.16044},
+	doi = {10.1111/gcb.16044},
+	language = {en},
+	number = {6},
+	urldate = {2022-08-18},
+	journal = {Global Change Biology},
+	author = {Jolly, Chris J. and Dickman, Chris R. and Doherty, Tim S. and Eeden, Lily M. and Geary, William L. and Legge, Sarah M. and Woinarski, John C. Z. and Nimmo, Dale G.},
+	month = mar,
+	year = {2022},
+	pages = {2053--2065},
+}
+
+@article{prox_framework_2020,
+	title = {A framework for conceptualizing dimensions of social organization in mammals},
+	volume = {10},
+	issn = {2045-7758, 2045-7758},
+	url = {https://onlinelibrary.wiley.com/doi/10.1002/ece3.5936},
+	doi = {10.1002/ece3.5936},
+	language = {en},
+	number = {2},
+	urldate = {2022-08-23},
+	journal = {Ecology and Evolution},
+	author = {Prox, Lea and Farine, Damien},
+	month = jan,
+	year = {2020},
+	pages = {791--807},
+	file = {Full Text:C\:\\Users\\stefa\\Zotero\\storage\\249T5B7F\\Prox and Farine - 2020 - A framework for conceptualizing dimensions of soci.pdf:application/pdf},
+}
